--- a/index.html
+++ b/index.html
@@ -1,1 +1,399 @@
-"Hello World" 
+<!doctype html>
+<!--[if lt IE 7]>
+<html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
+<!--[if IE 7]>
+<html class="no-js lt-ie9 lt-ie8" lang="en"> <![endif]-->
+<!--[if IE 8]>
+<html class="no-js lt-ie9" lang="en"> <![endif]-->
+<!--[if gt IE 8]><!-->
+<html class="no-js" lang="en"> <!--<![endif]-->
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <title>James & Becky are getting married!</title>
+    <meta name="description" content="We would like to invite you to our big day.">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="theme-color" content="#ffffff">
+    <meta property="og:title" content="James & Becky are getting married!">
+    <meta property="og:description" content="We would like to invite you to our big day.">
+    <meta property="og:image" content="img/logo.png">
+    <meta property="og:type" content="website">
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="manifest" href="manifest.json">
+    <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
+
+    <script>
+        // load css files from CDN if local node_modules fail
+        function loadCssFromCDN(css) {
+            // create new link tag
+            const link = document.createElement('link');
+            if (css === 'animate.css') {
+                link.href = 'https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css';
+            } else if (css === 'font-awesome.css') {
+                link.href = 'https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css';
+            }
+            link.rel = 'stylesheet';
+
+            // add link tag to head section
+            document.getElementsByTagName('head')[0].appendChild(link);
+        }
+
+        // load js files from CDN if local node_modules fail
+        function loadJsFromCDN(js) {
+            if (js === 'waypoints.js') {
+                document.write('<script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.js"><\/script>');
+            } else if (js === 'jquery.js') {
+                document.write('<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"><\/script>');
+            }
+        }
+    </script>
+
+    <link rel="stylesheet" href="css/normalize.min.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/jquery.fancybox.css">
+    <link rel="stylesheet" href="css/flexslider.css">
+    <link rel="stylesheet" href="css/styles.min.css">
+    <link rel="stylesheet" href="css/queries.css">
+    <link rel="stylesheet" href="node_modules/animate.css/animate.min.css" onerror="loadCssFromCDN('animate.css')">
+    <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" onerror="loadCssFromCDN('font-awesome.css')">
+    <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+</head>
+<body id="top">
+<!--[if lt IE 8]>
+<p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade
+    your browser</a> to improve your experience.</p>
+<![endif]-->
+<section class="hero">
+    <section class="navigation">
+        <header>
+            <div class="header-content">
+                <div class="logo"><a href="#"><img src="img/logo.png" alt="Logo"></a></div>
+                <div class="header-nav">
+                    <nav>
+                        <ul class="primary-nav">
+                            <!--<li><a href="#intro">How we met</a></li>-->
+                            <li><a href="#events">Events</a></li>
+                            <!--<li><a href="#instagram">Instagram</a></li>-->
+                            <!--<li><a href="#eng-pics">Engagement</a></li>-->
+                            <li class="hidden-sm hidden-xs"><a href="#video-bg">Glimpse of the venue</a></li>
+                        </ul>
+                        <ul class="member-actions">
+                            <li><a href="#map" class="login">Venue</a></li>
+                            <li><a href="#rsvp" class="btn-white btn-small">RSVP</a></li>
+                        </ul>
+                    </nav>
+                </div>
+                <div class="navicon">
+                    <a class="nav-toggle" href="#"><span></span></a>
+                </div>
+            </div>
+        </header>
+    </section>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-10 col-md-offset-1">
+                <div class="hero-content text-center">
+                    <img src="img/logo.png">
+                    <p class="intro">James & Becky are getting married!</p>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-4 hidden-xs"></div>
+            <div class="col-sm-4 hidden-xs text-center"><a href="#rsvp" class="btn btn-accent btn-large rsvp-btn">RSVP</a></div>
+            <div class="col-sm-4 hidden-xs"></div>
+        </div>
+    </div>
+    <!--<div class="down-arrow floating-arrow"><a href="#invitation"><i class="fa fa-angle-down"></i></a></div>-->
+</section>
+
+<section id="invitation" class="section-padding">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <h3>We are getting married</h3>
+                <p>The date is 6<sup>th</sup> of November '25 and we would love for you to be a part of it.</p>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="events section-padding" id="events">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <h3 class="header">Wedding Timetable</h3>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <div class="wp3">
+                    <p><strong>6th November</strong></p>
+
+                    <h5>ARRIVE AT VENUE <span class="time">13:00 - 14:00</span></h5>
+                    <p>Please aim to arrive around 13:30 to mingle and get a drink before the ceremony!</p>
+                </div>
+                <div class="wp5">
+                    <h5>THE CEREMONY <span class="time">14:00 - 14:30</span></h5>
+                </div>
+                <div class="wp5">
+                    <h5>DRINKS RECEPTION <span class="time">14:30 - 16:00</span></h5>
+                </div>
+                <div class="wp5">
+                    <h5>DINNER IS SERVED <span class="time">16:00 - 18:30</span></h5>
+                </div>
+                <div class="wp5">
+                    <h5>SPEECHES AND TOASTS <span class="time">18:30 - 19:30</span></h5>
+                </div>
+                <div class="wp5">
+                    <h5>CAKE CUTTING AND FIRST DANCE <span class="time">20:00</span></h5>
+                </div>
+                <div class="wp5">
+                    <h5>PARTY! <span class="time">20:00 - LATE</span></h5>
+                </div>
+            </div>
+        </div>
+        <div class="row section-padding">
+            <div class="col-md-4 col-md-offset-4 text-center">
+                <a class="btn btn-accent btn-small" data-toggle="modal" data-target="#dc-modal">
+                    <i class="fa fa-barcode"></i>&nbsp;&nbsp;Dress code
+                </a>
+            </div>
+        </div>
+        <!--<div class="row">
+            <div class="col-xs-12 section-border section-padding">
+            </div>
+        </div>-->
+    </div>
+
+    <div id="dc-modal" class="modal fade" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-body">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span>&times;</span>
+                    </button>
+                    <h3 class="text-center section-padding">Dress codes?</h3>
+                    <p>
+                        <strong>Formal</strong>
+                        <br>
+                        Wear your best suits/dresses and aim to impress!
+                        Please avoid purple or green as these are reserved for the wedding party.
+                        It goes without saying, but please avoid white!
+                    </p>
+                </div>
+            </div><!-- /.modal-content -->
+        </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
+
+</section>
+<section id="video-bg" class="hidden-sm hidden-xs">
+    <div id="bgndVideo" class="player"
+         data-property="{videoURL:'https://www.youtube.com/watch?v=ZHS3sM4tXcQ&ab_channel=TheVoid',containment:'#video-bg',autoPlay:true, mute:true, showControls:false, startAt:80, stopAt:259, opacity:1}">
+    </div>
+    <div id="video-content">
+        <h5>Tithe Barn</h5>
+        <p>Bolton Abbey, Skipton</p>
+    </div>
+</section>
+
+<section id="map" class="section-padding">
+    <div class="text-center">
+        <h3>How do I get there?</h3>
+        <p>It's way easier than you think!</p>
+    </div>
+    <div id="map-canvas"></div>
+    <div id="map-content-wrapper" class="container pointer-events-none">
+        <div class="row">
+            <div class="col-xs-offset-1 col-xs-10 col-md-offset-3 col-md-6">
+                <div class="text-center">
+                    <div id="btn-show-content" class="toggle-map-content pointer-events-auto">
+                        <i class="fa fa-info-circle"></i>&nbsp;&nbsp; Show info
+                    </div>
+                </div>
+                <div id="map-content" class="pointer-events-auto">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="text-center">
+                                <h5>Tithe Barn</h5>
+                                <p>Bolton Abbey,<br>Skipton,<br>BD23 6EX</p>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="text-center">
+                            <h5>Skipton Taxi's</h5>
+                            <p><i class="fa fa-mobile"></i> <a href="tel://01756 701122">01756 701122</a></p>
+                            <h5>Aire Cabs</h5>
+                            <p><i class="fa fa-mobile"></i> <a href="tel://01756 799999">01756 799999</a></p>
+                        </div>
+                        </div>
+                    </div>
+                    <div class="row text-center">
+                        <div class="col-md-12" style="padding: 5px;">
+                            <a class="btn btn-accent btn-small" id="btn-show-map"><i class="fa fa-map-marker"></i>&nbsp;&nbsp;Show
+                                map</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section id="hotels" class="events section-padding">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <h3 class="header">Where to stay?</h3>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <div class="wp3">
+                    <h5>The Devonshire Arms Hotel & Spa (0.8 miles)</h5>
+                    <p><a href="https://devonshirehotels.co.uk/devonshire-arms-hotel-spa/" target="_blank">devonshirearms.co.uk</a><br>
+                        <i class="fa fa-mobile"></i> <a href="tel://01756 718100">01756 718100</a></p>
+                </div>
+                <div class="wp3">
+                    <h5>The Riverside Hotel (5.6 miles)</h5>
+                    <p><a href="https://ilkley-riversidehotel.com/" target="_blank">ilkley-riversidehotel.com</a><br>
+                        <i class="fa fa-mobile"></i> <a href="tel://01943 607338">01943 607338</a></p>
+                </div>
+                <div class="wp3">
+                    <h5>The Devonshire Fell Hotel (5.8 miles)</h5>
+                    <p><a href="https://devonshirehotels.co.uk/devonshire-fell-burnsall/" target="_blank">devonshirefell.co.uk</a><br>
+                        <i class="fa fa-mobile"></i> <a href="tel://01756 729000">01756 729000</a></p>
+                </div>
+                <div class="wp3">
+                    <h5>Herriots Hotel (6.9 miles)</h5>
+                    <p><a href="https://www.herriotsforleisure.co.uk/" target="_blank">herriotsforleisure.co.uk</a><br>
+                        <i class="fa fa-mobile"></i> <a href="tel://01756 792781">01756 792781</a></p>
+                </div>
+                <div class="wp3">
+                    <h5>Travelodge Skipton (7.9 miles)</h5>
+                    <p><a href="https://www.travelodge.co.uk/hotels/176/Skipton-hotel?WT.tsrc=GHA_Organic&utm_campaign=GHA_Skipton&utm_medium=GHA_Organic&utm_source=google" target="_blank">travelodge.co.uk</a><br>
+                        <i class="fa fa-mobile"></i> <a href="tel://08719 846177">08719 846177</a></p>
+                </div>
+                <div class="wp3">
+                    <h5>The Coniston Hotel Country Estate & Spa (13.2 miles)</h5>
+                    <p><a href="https://theconistonhotel.com/" target="_blank">theconistonhotel.com</a><br>
+                        <i class="fa fa-mobile"></i> <a href="tel://01756 748080">01756 748080</a></p>
+                </div>
+                <div class="wp3">
+                    <h5>Premier Inn, Skipton (15.4 miles)</h5>
+                    <p><a href="https://www.premierinn.com/gb/en/hotels/england/north-yorkshire/skipton/skipton-north-gargrave.html" target="_blank">premierinn.com</a><br>
+                        <i class="fa fa-mobile"></i> <a href="tel://0871 5278980">0871 5278980</a></p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="rsvp text-center" id="rsvp">
+
+    <div id="rsvp-modal" class="modal fade" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-body">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span>&times;</span>
+                    </button>
+                    <div class="section-padding">
+                        <h3>Thank you!</h3>
+                        <p>We are glad to see you join us on our big day.</p>
+                        <div id="add-to-cal"></div>
+                    </div>
+                </div>
+            </div><!-- /.modal-content -->
+        </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
+
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 col-md-offset-3">
+                <h3>What are you waiting for?</h3>
+                <p>We would greatly appreciate if you could RSVP before a date</p>
+                <form id="rsvp-form" class="rsvp-form"
+                      action=""
+                      method="POST">
+                    <div class="row">
+                        <div class="col-md-6 col-sm-6">
+                            <div class="form-input-group">
+                                <i class="fa fa-envelope"></i><input type="email" name="email" class=""
+                                                                     placeholder="Your email"
+                                                                     required>
+                            </div>
+                        </div>
+                        <div class="col-md-6 col-sm-6">
+                            <div class="form-input-group">
+                                <i class="fa fa-user"></i><input name="name" class=""
+                                                                 placeholder="Your name"
+                                                                 required>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6 col-sm-6">
+                            <div class="form-input-group">
+                                <i class="fa fa-users"></i><input name="extras" class=""
+                                                                    placeholder="RSVP for another">
+                            </div>
+                        </div>
+                        <div class="col-md-6 col-sm-6">
+                            <div class="form-input-group">
+                                <i class="fa fa-key"></i><input type="number" name="invite_code" id="invite_code"
+                                                                class="" min="0"
+                                                                placeholder="Invite code"
+                                                                required>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12" id="alert-wrapper"></div>
+                    </div>
+                    <button class="btn-fill rsvp-btn">
+                        Yes,
+                        that's me!
+                    </button>
+                </form>
+            </div>
+        </div>
+    </div>
+</section>
+<footer>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12 text-center content">
+                <span class="to-top-wrapper"><a href="#top" class="to-top"><i class="fa fa-angle-up"></i></a></span>
+                <p>Crafted by James with lots of <span class="fa fa-heart pulse2"></span> for Becky</p>
+            </div>
+        </div>
+    </div>
+</footer>
+<script src="js/vendor/jquery-1.11.2.min.js" onerror="loadJsFromCDN('jquery.js')"></script>
+<script src="node_modules/waypoints/lib/jquery.waypoints.min.js" onerror="loadJsFromCDN('waypoints.js')"></script>
+<script src="js/jquery.fancybox.pack.js"></script>
+<script src="js/vendor/bootstrap.min.js"></script>
+<script src="js/jquery.flexslider-min.js"></script>
+<script src="js/jquery.mb.YTPlayer.min.js"></script>
+<script src="js/vendor/ouical.js"></script>
+<script src="js/scripts.min.js"></script>
+<script async
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyApLuQTE8aQGqj8fDF2H-i30YJ2ruyyCf8&callback=initMap">
+</script>
+<script>
+    (function (i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r;
+        i[r] = i[r] || function () {
+            (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date();
+        a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0];
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+    ga('create', 'UA-46465113-4', 'auto');
+    ga('send', 'pageview');
+</script>
+</body>
+</html>
