Removed broken video. Added image section. Updated nav

--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
     <section class="navigation">
         <header>
             <div class="header-content">
-                <!--<div class="logo"><a href="#"><img src="img/logo.png" alt="Logo"></a></div>-->
                 <div class="header-nav">
                     <nav>
                         <ul class="primary-nav">
                             <li><a href="#events">Timetable</a></li>
-                            <li><a href="#map" class="login">Venue</a></li>
+                            <li><a href="#venue">Venue</a></li>
+                            <li><a href="#map" class="login">Map</a></li>
                             <li><a href="#hotels">Hotels</a></li>
                             <li><a href="#rsvp">RSVP</a></li>
                         </ul>
@@ -101,10 +101,9 @@
             <div class="col-sm-4 hidden-xs"></div>
         </div>
     </div>
-    <!--<div class="down-arrow floating-arrow"><a href="#invitation"><i class="fa fa-angle-down"></i></a></div>-->
 </section>
 
-<section id="invitation" class="section-padding">
+<section id="invitation" class="events section-padding">
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
@@ -114,7 +113,7 @@
         </div>
     </div>
 </section>
-<section class="events section-padding" id="events">
+<section class="section-padding" id="events">
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
@@ -156,10 +155,6 @@
                 </a>
             </div>
         </div>
-        <!--<div class="row">
-            <div class="col-xs-12 section-border section-padding">
-            </div>
-        </div>-->
     </div>
 
     <div id="dc-modal" class="modal fade" tabindex="-1" role="dialog">
@@ -182,13 +177,83 @@
     </div><!-- /.modal -->
 
 </section>
-<section id="video-bg" class="hidden-sm hidden-xs">
-    <div id="bgndVideo" class="player"
-         data-property="{videoURL:'https://www.youtube.com/watch?v=ZHS3sM4tXcQ&ab_channel=TheVoid',containment:'#video-bg',autoPlay:true, mute:true, showControls:false, startAt:80, stopAt:259, opacity:1}">
+
+<section id="venue" class="events section-padding">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <h3 class="header">The Venue</h3>
+                <h5>Tithe Barn</h5>
+                <p>Bolton Abbey, Skipton</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-2">
+                <a class="fancybox" rel="group" href="img/tithe/tithe1.jpg">
+                    <div class="img-wrap">
+                        <div class="overlay">
+                            <i class="fa fa-search"></i>
+                        </div>
+                        <img src="img/tithe/tithe1.jpg" alt=""/>
+                    </div>
+                </a>
+            </div>
+            <div class="col-md-2">
+                <a class="fancybox" rel="group" href="img/tithe/tithe2.jpg">
+                    <div class="img-wrap">
+                        <div class="overlay">
+                            <i class="fa fa-search"></i>
+                        </div>
+                        <img src="img/tithe/tithe2.jpg" alt=""/>
+                    </div>
+                </a>
+            </div>
+            <div class="col-md-2">
+                <a class="fancybox" rel="group" href="img/tithe/tithe3.jpg">
+                    <div class="img-wrap">
+                        <div class="overlay">
+                            <i class="fa fa-search"></i>
+                        </div>
+                        <img src="img/tithe/tithe3.jpg" alt=""/>
+                    </div>
+                </a>
+            </div>
+            <div class="col-md-2">
+                <a class="fancybox" rel="group" href="img/tithe/tithe4.jpg">
+                    <div class="img-wrap">
+                        <div class="overlay">
+                            <i class="fa fa-search"></i>
+                        </div>
+                        <img src="img/tithe/tithe4.jpg" alt=""/>
+                    </div>
+                </a>
+            </div>
+            <div class="col-md-2">
+                <a class="fancybox" rel="group" href="img/tithe/tithe5.jpg">
+                    <div class="img-wrap">
+                        <div class="overlay">
+                            <i class="fa fa-search"></i>
+                        </div>
+                        <img src="img/tithe/tithe5.jpg" alt=""/>
+                    </div>
+                </a>
+            </div>
+            <div class="col-md-2">
+                <a class="fancybox" rel="group" href="img/tithe/tithe6.jpg">
+                    <div class="img-wrap">
+                        <div class="overlay">
+                            <i class="fa fa-search"></i>
+                        </div>
+                        <img src="img/tithe/tithe6.jpg" alt=""/>
+                    </div>
+                </a>
+            </div>
+        </div>
     </div>
-    <div id="video-content">
-        <h5>Tithe Barn</h5>
-        <p>Bolton Abbey, Skipton</p>
+    <div class="container">
+        <div class="row hidden-lg hidden-md hidden-xs">
+            <div class="col-xs-12 section-border section-padding"></div>
+        </div>
     </div>
 </section>
 
