Added contact us section

--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
                             <li><a href="#map" class="login">Map</a></li>
                             <li><a href="#hotels">Hotels</a></li>
                             <li><a href="#rsvp">RSVP</a></li>
+                            <li><a href="#contact-us">Contact Us</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -447,6 +448,26 @@
                 </form>
             </div>
         </div>
+    </div>
+</section>
+<section id="contact-us" class="events section-padding">
+    <div class="container">
+        <h2>Contact Us</h2>
+        
+        <!-- Email and Phone Information -->
+        <div class="contact-info">
+            <div class="contact-person">
+                <h3>James</h3>
+                <p>Email: <a href="mailto:jamesawilson1996@gmail.com">jamesawilson1996@gmail.com</a><br>Phone: <a href="tel:+447415700445">(+44) 7415 700445</a></p>
+            </div>
+            <div class="contact-person">
+                <h3>Becky</h3>
+                <p>Email: <a href="mailto:beckyholden99@gmail.com">beckyholden99@gmail.com</a><br>Phone: <a href="tel:+447470310666">(+44) 7470 310666</a></p>
+            </div>            
+        </div>
+
+        <!-- Optionally, you can add a brief description or instructions -->
+        <p>If you have any questions, please don't hesitate to reach out. We're here to help!</p>
     </div>
 </section>
 <footer>
