FAQ section added

--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
                             <li><a href="#map" class="login">Map</a></li>
                             <li><a href="#hotels">Hotels</a></li>
                             <li><a href="#rsvp">RSVP</a></li>
+                            <li><a href="#faq">FAQ</a></li>
                             <li><a href="#contact-us">Contact Us</a></li>
                         </ul>
                     </nav>
@@ -119,7 +120,6 @@
             <div class="col-md-12 text-center">
                 <div class="wp3">
                     <p><strong>6th November</strong></p>
-
                     <h5>ARRIVE AT VENUE <span class="time">13:00 - 14:00</span></h5>
                     <p>Please aim to arrive around 13:30 to mingle and get a drink before the ceremony!</p>
                 </div>
@@ -450,7 +450,34 @@
         </div>
     </div>
 </section>
-<section id="contact-us" class="events section-padding">
+<section id="faq" class="events section-padding">
+    <div class="row">
+        <div class="col-md-12 text-center">
+            <h2 class="header">FAQ</h2>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12 text-center">
+            <div class="wp5">
+                <h3>Will food be provided at the reception?</h3>
+                <p>Yes, a full dinner will be served at the reception. Please note that dietary restrictions can be accommodated with advance notice.</p>
+            </div>
+            <div class="wp5">
+                <h3>Can we bring a gift to give to the couple on their special day?</h3>
+                <p>While gifts are not required or expected, they are always appreciated. A registry is available online if you'd like to consider gifting something.</p>
+            </div>
+            <div class="wp5">
+                <h3>Is photography and/or videography allowed during the ceremony and reception?</h3>
+                <p>Yes, official photographers and videographers will be capturing the wedding. However, please refrain from taking photos or videos during the ceremony itself.</p>
+            </div>
+            <div class="wp5">
+                <h3>Are children allowed at the ceremony and/or reception?</h3>
+                <p>We're having an adult-only celebration at our wedding, which means no kids will be allowed. We hope you can understand and respect this decision so we can create a wonderful experience for everyone involved.</p>
+            </div>
+        </div>
+    </div>
+</section>
+<section id="contact-us" class="section-padding">
     <div class="container">
         <h2>Contact Us</h2>
         
