Centered Contact Us section

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <div class="header-nav">
                     <nav>
                         <ul class="primary-nav">
-                            <li><a href="#events">Timetable</a></li>
+                            <li><a href="#events">Programme</a></li>
                             <li><a href="#venue">Venue</a></li>
                             <li><a href="#map" class="login">Map</a></li>
                             <li><a href="#hotels">Hotels</a></li>
@@ -113,7 +113,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center">
-                <h3 class="header">Wedding Timetable</h3>
+                <h3 class="header">Wedding Programme</h3>
             </div>
         </div>
         <div class="row">
@@ -479,22 +479,22 @@
 </section>
 <section id="contact-us" class="section-padding">
     <div class="container">
-        <h2>Contact Us</h2>
-        
-        <!-- Email and Phone Information -->
-        <div class="contact-info">
-            <div class="contact-person">
-                <h3>James</h3>
-                <p>Email: <a href="mailto:jamesawilson1996@gmail.com">jamesawilson1996@gmail.com</a><br>Phone: <a href="tel:+447415700445">(+44) 7415 700445</a></p>
-            </div>
-            <div class="contact-person">
-                <h3>Becky</h3>
-                <p>Email: <a href="mailto:beckyholden99@gmail.com">beckyholden99@gmail.com</a><br>Phone: <a href="tel:+447470310666">(+44) 7470 310666</a></p>
-            </div>            
+        <div class="col-md-12 text-center">
+            <h2>Contact Us</h2>
         </div>
-
-        <!-- Optionally, you can add a brief description or instructions -->
+        <div class="col-md-12 text-center">
+            <div class="contact-info">
+                <div class="contact-person">
+                    <h3>Becky</h3>
+                    <p>Email: <a href="mailto:beckyholden99@gmail.com">beckyholden99@gmail.com</a><br>Phone: <a href="tel:+447470310666">(+44) 7470 310666</a></p>
+                </div> 
+                <div class="contact-person">
+                    <h3>James</h3>
+                    <p>Email: <a href="mailto:jamesawilson1996@gmail.com">jamesawilson1996@gmail.com</a><br>Phone: <a href="tel:+447415700445">(+44) 7415 700445</a></p>
+                </div>           
+            </div>
         <p>If you have any questions, please don't hesitate to reach out. We're here to help!</p>
+        </div>
     </div>
 </section>
 <footer>
