Moved FAQ section above RSVP. Added spotify embed.

--- a/index.html
+++ b/index.html
@@ -76,9 +76,10 @@
                             <li><a href="#venue">Venue</a></li>
                             <li><a href="#map" class="login">Map</a></li>
                             <li><a href="#hotels">Hotels</a></li>
-                            <li><a href="#rsvp">RSVP</a></li>
                             <li><a href="#faq">FAQ</a></li>
+                            <li><a href="#rsvp">RSVP</a></li>
                             <li><a href="#contact-us">Contact Us</a></li>
+                            <li><a href="#contact-us">Playlist</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -120,7 +121,7 @@
             <div class="col-md-12 text-center">
                 <div class="wp3">
                     <p><strong>6th November</strong></p>
-                    <h5>ARRIVE AT VENUE <span class="time">13:00 - 14:00</span></h5>
+                    <h5>ARRIVE AT VENUE <span class="time">13:30 - 14:00</span></h5>
                     <p>Please aim to arrive around 13:30 to mingle and get a drink before the ceremony!</p>
                 </div>
                 <div class="wp5">
@@ -130,10 +131,10 @@
                     <h5>DRINKS RECEPTION <span class="time">14:30 - 16:00</span></h5>
                 </div>
                 <div class="wp5">
-                    <h5>DINNER IS SERVED <span class="time">16:00 - 18:30</span></h5>
+                    <h5>DINNER IS SERVED <span class="time">16:00 - 18:00</span></h5>
                 </div>
                 <div class="wp5">
-                    <h5>SPEECHES AND TOASTS <span class="time">18:30 - 19:30</span></h5>
+                    <h5>SPEECHES AND TOASTS <span class="time">18:00 - 19:00</span></h5>
                 </div>
                 <div class="wp5">
                     <h5>CAKE CUTTING AND FIRST DANCE <span class="time">20:00</span></h5>
@@ -344,6 +345,34 @@
     </div>
 </section>
 
+<section id="faq" class="section-padding">
+    <div class="row">
+        <div class="col-md-12 text-center">
+            <h2 class="header">FAQ</h2>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12 text-center">
+            <div class="wp5">
+                <h3>Will food be provided at the reception?</h3>
+                <p>Yes, a full dinner will be served at the reception. Please note that dietary restrictions can be accommodated with advance notice.</p>
+            </div>
+            <div class="wp5">
+                <h3>Can we bring a gift to give to the couple on their special day?</h3>
+                <p>While gifts are not required or expected, they are always appreciated.</p>
+            </div>
+            <div class="wp5">
+                <h3>Is photography and/or videography allowed during the ceremony and reception?</h3>
+                <p>Yes, official photographers and videographers will be capturing the wedding. We also encourage you to take your own photos and videos on the day. However, please refrain from taking photos or videos during the ceremony itself.</p>
+            </div>
+            <div class="wp5">
+                <h3>Are children allowed at the ceremony and/or reception?</h3>
+                <p>We're having an adult-only celebration at our wedding, which means no kids will be allowed. We hope you can understand and respect this decision so we can create a wonderful experience for everyone involved.</p>
+            </div>
+        </div>
+    </div>
+</section>
+
 <section class="rsvp text-center" id="rsvp">
 
     <div id="rsvp-modal" class="modal fade" tabindex="-1" role="dialog">
@@ -381,7 +410,7 @@
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
                 <h3>What are you waiting for?</h3>
-                <p>We would greatly appreciate if you could RSVP before a date. Please include Allergies/Dietary Requirements below.</p>
+                <p>We would greatly appreciate if you could RSVP before the 18<sup>th</sup> of September. Please include Allergies/Dietary Requirements below.</p>
                 <form id="rsvp-form" class="rsvp-form"
                       action=""
                       method="POST">
@@ -450,33 +479,7 @@
         </div>
     </div>
 </section>
-<section id="faq" class="events section-padding">
-    <div class="row">
-        <div class="col-md-12 text-center">
-            <h2 class="header">FAQ</h2>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-12 text-center">
-            <div class="wp5">
-                <h3>Will food be provided at the reception?</h3>
-                <p>Yes, a full dinner will be served at the reception. Please note that dietary restrictions can be accommodated with advance notice.</p>
-            </div>
-            <div class="wp5">
-                <h3>Can we bring a gift to give to the couple on their special day?</h3>
-                <p>While gifts are not required or expected, they are always appreciated. A registry is available online if you'd like to consider gifting something.</p>
-            </div>
-            <div class="wp5">
-                <h3>Is photography and/or videography allowed during the ceremony and reception?</h3>
-                <p>Yes, official photographers and videographers will be capturing the wedding. However, please refrain from taking photos or videos during the ceremony itself.</p>
-            </div>
-            <div class="wp5">
-                <h3>Are children allowed at the ceremony and/or reception?</h3>
-                <p>We're having an adult-only celebration at our wedding, which means no kids will be allowed. We hope you can understand and respect this decision so we can create a wonderful experience for everyone involved.</p>
-            </div>
-        </div>
-    </div>
-</section>
+
 <section id="contact-us" class="section-padding">
     <div class="container">
         <div class="col-md-12 text-center">
@@ -497,12 +500,25 @@
         </div>
     </div>
 </section>
+
+<section id="playlist" class="events section-padding">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <h3 class="header">Recommended Listening</h3>
+            </div>
+        </div>
+        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/0BiwJc3JfocomjveugzXfS?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+    </div>
+    
+</section>
 <footer>
     <div class="container">
         <div class="row">
             <div class="col-sm-12 text-center content">
                 <span class="to-top-wrapper"><a href="#top" class="to-top"><i class="fa fa-angle-up"></i></a></span>
-                <p>Crafted by James with lots of <span class="fa fa-heart pulse2"></span> for Becky</p>
+                <p>Crafted by James with lots of <span class="fa fa-heart pulse2"></span> for Becky<br>
+                    For the curious, you can find the source code for the website <a href="https://github.com/JamesWilson1996/JamesWilson1996.github.io">here</a></p>
             </div>
         </div>
     </div>
