--- a/index.html
+++ b/index.html
@@ -509,9 +509,58 @@
             </div>
         </div>
         <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/0BiwJc3JfocomjveugzXfS?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-    </div>
-    
+    </div>    
 </section>
+
+<section class="rsvp text-center" id="song-requests">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 col-md-offset-3">
+                <h3>Want to hear a song during the party?</h3>
+                <p>Fill out the form below to submit song requests!</p>
+                <form id="request-form" class="rsvp-form"
+                      action=""
+                      method="POST">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="form-input-group">
+                                <i class="fa fa-envelope"></i><input type="email" id="requester" name="requester" class=""
+                                                                     placeholder="Your email"
+                                                                     required>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="form-input-group">
+                                <i class="fa fa-user"></i><input name="song_url" id="song_url" class=""
+                                                                 placeholder="Link to the song"
+                                                                 required>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="form-input-group">
+                                <i class="fa fa-key"></i><input type="number" name="invite_code" id="code"
+                                                                class="" min="0"
+                                                                placeholder="Invite code"
+                                                                required>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12" id="request-alert-wrapper"></div>
+                    </div>
+                    <button class="btn-fill rsvp-btn">
+                        Add my song to the playlist!
+                    </button>
+                </form>
+            </div>
+        </div>
+    </div>
+</section>
+
 <footer>
     <div class="container">
         <div class="row">
