Reverted script source back to minified file.

--- a/index.html
+++ b/index.html
@@ -580,7 +580,7 @@
 <script src="js/jquery.flexslider-min.js"></script>
 <script src="js/jquery.mb.YTPlayer.min.js"></script>
 <script src="js/vendor/ouical.js"></script>
-<script src="js/scripts.js"></script>
+<script src="js/scripts.min.js"></script>
 <script async
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyApLuQTE8aQGqj8fDF2H-i30YJ2ruyyCf8&callback=initMap">
 </script>
