Removed invite_code from request form. Added url validation and restricted to Spotify/YouTube links.

--- a/index.html
+++ b/index.html
@@ -516,18 +516,8 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="form-input-group">
-                                <i class="fa fa-search"></i><input name="song_url" id="song_url" class=""
-                                                                 placeholder="Link to the song"
-                                                                 required>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-12">
-                            <div class="form-input-group">
-                                <i class="fa fa-key"></i><input type="number" name="invite_code" id="code"
-                                                                class="" min="0"
-                                                                placeholder="Invite code"
+                                <i class="fa fa-search"></i><input name="song_url" id="song_url" type="url" class=""
+                                                                placeholder="https://example.com" pattern="https://*.*"
                                                                 required>
                             </div>
                         </div>
