--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
                 <h3>What are you waiting for?</h3>
-                <p>We would greatly appreciate if you could RSVP before the 1<sup>st</sup> of August. Please include Allergies/Dietary Requirements below.</p>
+                <p>We would greatly appreciate if you could RSVP before the 1<sup>st</sup> of June. Please include Allergies/Dietary Requirements below.</p>
                 <form id="rsvp-form" class="rsvp-form"
                       action=""
                       method="POST">
@@ -526,7 +526,7 @@
                         <div class="col-md-12" id="request-alert-wrapper"></div>
                     </div>
                     <button class="btn-fill rsvp-btn">
-                        Add my song!
+                        Submit my song request!
                     </button>
                 </form>
             </div>
