Updated github url

--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
             <div class="col-sm-12 text-center content">
                 <span class="to-top-wrapper"><a href="#top" class="to-top"><i class="fa fa-angle-up"></i></a></span>
                 <p>Crafted by James with lots of <span class="fa fa-heart pulse2"></span> for Becky<br>
-                    For the curious, you can find the source code for the website <a href="https://github.com/JamesWilson1996/JamesWilson1996.github.io" target="_blank">here</a></p>
+                    For the curious, you can find the source code for the website <a href="https://github.com/JamesWilson1996/WeddingWebsite" target="_blank">here</a></p>
             </div>
         </div>
     </div>
