--- a/index.html
+++ b/index.html
@@ -107,6 +107,12 @@
                 <h3>We are getting married</h3>
                 <p>The date is 6<sup>th</sup> of November '25 and we would love for you to be a part of it.</p>
             </div>
+            <div class="row">
+                <div class="col-sm-4 hidden-xs"></div>
+                <div class="col-sm-4 hidden-xs text-center"><a href="#rsvp"
+                                                            class="btn btn-accent btn-large rsvp-btn">RSVP</a></div>
+                <div class="col-sm-4 hidden-xs"></div>
+            </div>
         </div>
     </div>
 </section>
