--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
         <div class="row">
             <div class="col-md-6 col-md-offset-3">
                 <h3>What are you waiting for?</h3>
-                <p>We would greatly appreciate if you could RSVP before the 1<sup>st</sup> of June. Please include Allergies/Dietary Requirements below.</p>
+                <p>We would greatly appreciate if you could RSVP before the 30<sup>th</sup> of June. Please include Allergies/Dietary Requirements below.</p>
                 <form id="rsvp-form" class="rsvp-form"
                       action=""
                       method="POST">
